Add References to README.md

--- a/RNNvsHoltWinters.ipynb
+++ b/RNNvsHoltWinters.ipynb
@@ -222,10 +222,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "502/502 [==============================] - 173s 344ms/step - loss: 0.0340\n",
-      "Epoch 2/10\n",
-      "138/502 [=======>......................] - ETA: 2:00 - loss: 0.0142"
+      "Epoch 1/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0313\n",
+      "Epoch 2/100\n",
+      "126/126 [==============================] - 9s 75ms/step - loss: 0.0148\n",
+      "Epoch 3/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0116\n",
+      "Epoch 4/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0098\n",
+      "Epoch 5/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0086\n",
+      "Epoch 6/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0073\n",
+      "Epoch 7/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0068\n",
+      "Epoch 8/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0058\n",
+      "Epoch 9/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0054\n",
+      "Epoch 10/100\n",
+      "126/126 [==============================] - 10s 78ms/step - loss: 0.0049\n",
+      "Epoch 11/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0048\n",
+      "Epoch 12/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0044\n",
+      "Epoch 13/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0041\n",
+      "Epoch 14/100\n",
+      "126/126 [==============================] - 9s 74ms/step - loss: 0.0042\n",
+      "Epoch 15/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0040\n",
+      "Epoch 16/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0038\n",
+      "Epoch 17/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0036\n",
+      "Epoch 18/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0033\n",
+      "Epoch 19/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0035\n",
+      "Epoch 20/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0034\n",
+      "Epoch 21/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0033\n",
+      "Epoch 22/100\n",
+      "126/126 [==============================] - 10s 77ms/step - loss: 0.0032\n",
+      "Epoch 23/100\n",
+      "126/126 [==============================] - 10s 76ms/step - loss: 0.0033\n",
+      "Epoch 24/100\n",
+      "  4/126 [..............................] - ETA: 7s - loss: 0.0032"
      ]
     }
    ],
@@ -234,19 +278,19 @@
     "model = Sequential()\n",
     "\n",
     "# Capa de entrada\n",
-    "model.add(LSTM(units=5, return_sequences=True, input_shape=(X_train.shape[1], 1)))\n",
+    "model.add(LSTM(units=10, return_sequences=True, input_shape=(X_train.shape[1], 1)))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "# Capa intermedia 1\n",
-    "model.add(LSTM(units=5, return_sequences=True))\n",
+    "model.add(LSTM(units=10, return_sequences=True))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "# Capa intermedia 2\n",
-    "model.add(LSTM(units=5, return_sequences=True))\n",
+    "model.add(LSTM(units=10, return_sequences=True))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "# Capa intermedia 3\n",
-    "model.add(LSTM(units=5))\n",
+    "model.add(LSTM(units=10))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "# Capa de salida\n",
@@ -256,7 +300,7 @@
     "model.compile(optimizer='rmsprop', loss='mean_squared_error')\n",
     "\n",
     "# Introducimos nuestros datos de entrenamiento\n",
-    "model.fit(X_train, y_train, epochs=10, batch_size=5)"
+    "model.fit(X_train, y_train, epochs=100, batch_size=20)"
    ]
   },
   {
