Add comments and test different layer for the RNN

--- a/RNNvsHoltWinters.ipynb
+++ b/RNNvsHoltWinters.ipynb
@@ -27,8 +27,8 @@
     "# convert an array of values into a dataset matrix\n",
     "def create_dataset(dataset, memory=1):\n",
     "    dataX, dataY = [], []\n",
-    "    for i in range(len(dataset)-memory-1):\n",
-    "        a = dataset[i:(i+memory), 0]\n",
+    "    for i in range(len(dataset) - memory - 1):\n",
+    "        a = dataset[i:(i + memory), 0]\n",
     "        dataX.append(a)\n",
     "        dataY.append(dataset[i + memory, 0])\n",
     "    return np.array(dataX), np.array(dataY)"
@@ -58,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -171,6 +173,45 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Open      0\n",
+       "High      0\n",
+       "Low       0\n",
+       "Close     0\n",
+       "Volume    0\n",
+       "Name      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Searching null values.\n",
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replacing null values by its mean value.\n",
+    "dataset.replace(np.NAN, dataset.mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,27 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Column to be selected\n",
-    "column=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Only we take the High column\n",
+    "column=1\n",
     "data_set = dataset.iloc[:, column:column+1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +332,7 @@
        "[3019 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,23 +354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Normalize between 0,1 the datasets\n",
     "scaler = MinMaxScaler(feature_range=(0,1))\n",
-    "# Be carefull with max and min, can be change.\n",
-    "# We will add new values with .fit method to recalculate min, max.\n",
     "scaler.fit(data_set)\n",
-    "data_set_scalated = scaler.transform(data_set)\n",
+    "data_set_scaled = scaler.transform(data_set)\n",
     "training_set_scaled = scaler.transform(training_set)\n",
     "test_set_scaled = scaler.transform(test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -368,27 +398,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory = 252\n",
+    "# We define the memory for our LSTM\n",
+    "memory = 60\n",
     "X_train, y_train = create_dataset(training_set_scaled, memory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2707, 60)\n",
+      "0.00892925\n",
+      "[0.00892925]\n",
+      "[0.01805224 0.01844816 0.01876827 0.01752154 0.01722671 0.01634221\n",
+      " 0.01582836 0.01562618 0.01517972 0.01540717 0.01595471 0.01521342\n",
+      " 0.01554195 0.01527238 0.01530608 0.01556722 0.01593787 0.01656965\n",
+      " 0.01592944 0.0154914  0.01494386 0.01027706 0.01014228 0.01002434\n",
+      " 0.0101844  0.01069825 0.01029391 0.01020967 0.01026864 0.01093412\n",
+      " 0.01154063 0.01101836 0.01079091 0.01078249 0.01048765 0.01020125\n",
+      " 0.01051293 0.00993168 0.00959473 0.00901349 0.00971266 0.00950207\n",
+      " 0.00936729 0.00940941 0.00897979 0.0085923  0.00870181 0.00901349\n",
+      " 0.00901349 0.00934202 0.00899664 0.00924093 0.00878604 0.00862599\n",
+      " 0.00845751 0.00827219 0.00788469 0.00818795 0.00885343 0.00892925]\n"
+     ]
+    }
+   ],
    "source": [
-    "# reshape input to be [samples=X_train.shape[0], time steps=1, features=X_train.shape[1]]\n",
-    "X_train = np.reshape(X_train, (X_train.shape[0], 1, X_train.shape[1]))"
+    "# Checking the data shaping\n",
+    "print(X_train.shape)\n",
+    "print('{:.8f}'.format(y_train[0]))\n",
+    "print(data_set_scaled[memory])\n",
+    "# Last digit must be the same\n",
+    "print(X_train[1,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape input to be [samples=X_train.shape[0], time steps=X_train.shape[1], features=1].\n",
+    "X_train = np.reshape(X_train, (X_train.shape[0], X_train.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2707, 60, 1)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -400,23 +485,24 @@
     "model = Sequential()\n",
     "\n",
     "# Input layer\n",
-    "model.add(LSTM(units=10, return_sequences=True, input_shape=(1, memory)))\n",
-    "model.add(Dropout(0.2))\n",
+    "model.add(LSTM(units=50, return_sequences=True, input_shape=(memory, 1)))\n",
     "\n",
-    "# First Intermediate layer\n",
-    "model.add(LSTM(units=10))\n",
+    "# Intermediate layers\n",
+    "model.add(LSTM(units=50, return_sequences=True))\n",
     "model.add(Dropout(0.2))\n",
+    "model.add(LSTM(units=50, return_sequences=False))\n",
+    "model.add(Dense(units=25))\n",
     "\n",
     "# Output layer\n",
     "model.add(Dense(units=1))\n",
     "\n",
     "# Compiling\n",
-    "model.compile(optimizer='rmsprop', loss='mean_squared_error')"
+    "model.compile(optimizer='adam', loss='mean_squared_error')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -429,18 +515,20 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm (LSTM)                  (None, 1, 10)             10520     \n",
+      "lstm (LSTM)                  (None, 60, 50)            10400     \n",
       "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 1, 10)             0         \n",
+      "lstm_1 (LSTM)                (None, 60, 50)            20200     \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 10)                840       \n",
+      "dropout (Dropout)            (None, 60, 50)            0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 10)                0         \n",
+      "lstm_2 (LSTM)                (None, 50)                20200     \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 1)                 11        \n",
+      "dense (Dense)                (None, 25)                1275      \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1)                 26        \n",
       "=================================================================\n",
-      "Total params: 11,371\n",
-      "Trainable params: 11,371\n",
+      "Total params: 52,101\n",
+      "Trainable params: 52,101\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -453,31 +541,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepairing the memory for the first value (the last value of the traninig data set).\n",
+    "inputs = data_set_scaled[len(data_set) - len(test_set) - memory:len(data_set) - len(test_set) - 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "2515/2515 [==============================] - 8s 3ms/step - loss: 0.0049\n",
-      "Epoch 2/10\n",
-      "2515/2515 [==============================] - 8s 3ms/step - loss: 0.0029\n",
-      "Epoch 3/10\n",
-      "2515/2515 [==============================] - 8s 3ms/step - loss: 0.0025\n",
-      "Epoch 4/10\n",
-      "2515/2515 [==============================] - 8s 3ms/step - loss: 0.0026\n",
-      "Epoch 5/10\n",
-      "2515/2515 [==============================] - 8s 3ms/step - loss: 0.0025\n",
-      "Epoch 6/10\n",
-      "1012/2515 [===========>..................] - ETA: 4s - loss: 0.0025"
+      "Epoch 1/5\n",
+      "542/542 [==============================] - 9s 17ms/step - loss: 8.3265e-04\n",
+      "Epoch 2/5\n",
+      "542/542 [==============================] - 9s 17ms/step - loss: 3.2141e-04\n",
+      "Epoch 3/5\n",
+      "323/542 [================>.............] - ETA: 3s - loss: 3.9220e-04"
      ]
     }
    ],
    "source": [
     "# Fitting\n",
-    "model.fit(X_train, y_train, epochs=10, batch_size=1)"
+    "model.fit(X_train, y_train, epochs=5, batch_size=5)"
    ]
   },
   {
@@ -486,24 +580,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepairing the memory for the first value (the last value of the traninig data set).\n",
-    "inputs = data_set_scalated[len(data_set) - len(test_set) - memory:len(data_set) - len(test_set) - 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# We want a large forecast not only one value.\n",
     "predicted_stock_price = np.array(training_set_scaled[-1])\n",
-    "for i in range(len(test_set)-1):\n",
+    "for i in range(len(test_set)):\n",
     "    inputs = np.vstack([inputs, predicted_stock_price[i]])\n",
     "    X_test = np.array(inputs[i:])\n",
-    "    X_test = np.reshape(X_test, (1, 1, X_test.shape[0]))\n",
+    "    X_test = np.reshape(X_test, (1, X_test.shape[0], 1))\n",
     "    predicted_stock_price = np.vstack([predicted_stock_price, model.predict(X_test)])\n",
     "\n",
-    "predicted_stock_price = scaler.inverse_transform(predicted_stock_price)"
+    "predicted_stock_price = scaler.inverse_transform(predicted_stock_price[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the first forecast value vs the first test value.\n",
+    "print(test_set.iloc[0].values)\n",
+    "print(predicted_stock_price[0])"
    ]
   },
   {
@@ -542,7 +638,7 @@
    "outputs": [],
    "source": [
     "# Plotting the graphs\n",
-    "plt.plot(test_set, color='red', label='Real' + stock + ' Stock Price')\n",
+    "plt.plot(test_set, color='red', label='Real ' + stock + ' Stock Price')\n",
     "plt.plot(predicted_set, color='blue', label='LSTM RNN')\n",
     "plt.plot(pred, color='green', label='Holt-Winters')\n",
     "plt.title(stock + ' Stock Price Prediction')\n",
@@ -565,6 +661,13 @@
     "print(\"The root mean squared error for RNN is {}.\".format(rnn_rmse))\n",
     "print(\"The root mean squared error for Holt-Winters is {}.\".format(hw_rmse))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
